--- a/simulator/index.html
+++ b/simulator/index.html
@@ -95,24 +95,31 @@
           rotorEnabled: mower.rotorEnabled()
         });
 
-        svg.select('.path')
-          .attr('d', line(updates));
-
         svg.select('.visits').selectAll('circle').data(updates)
           .enter()
-          .append('circle')
-          .attr('cx', function(d) { return xScale(d.longitude); })
-          .attr('cy', function(d) { return yScale(d.latitude); })
-          .attr('class', function(d) { return visitClassScale(d.rotorEnabled); })
-          .attr('r', radius);
+          .append('circle');
+        var lineData = line(updates);
 
-        transition = transition.transition()
+        transition = transition.transition();
+
         transition.select('.lawnmower')
           .attr('transform', 'translate(' + xScale(longitude) + ', ' + yScale(latitude) + ')');
         transition.select('.lawnmower-body')
           .style('fill', rotorEnabledScale(mower.rotorEnabled()));
         transition.select('.lawnmower-heading')
           .attr('transform', 'rotate(' + headingScale(mower.heading()) + ')');
+        transition.select('.path')
+          .attr('d', lineData)
+          .each('end', function() {
+            svg.select('.path')
+              .attr('d', lineData + 'L' + xScale(longitude) + ',' + yScale(latitude));
+          });
+
+        transition.transition().select('.visits').selectAll('circle')
+          .attr('cx', function(d) { return xScale(d.longitude); })
+          .attr('cy', function(d) { return yScale(d.latitude); })
+          .attr('class', function(d) { return visitClassScale(d.rotorEnabled); })
+          .attr('r', radius);
       });
       planner.plan(mower, yard);
     </script>
